# boxoffice-calendar

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
k8s/: boxoffice-calendar-configmap.yaml  boxoffice-calendar-cronjob.yaml
scripts/: generate_boxoffice_calendar.py
src/boxoffice_calendar/: __init__.py  cli.py  core.py
tests/: test_core.py
tests/fixtures/: calendar_sample.html
