[project]
name = "boxoffice-calendar"
version = "0.1.0"
description = "Scrape Box Office Mojo release dates into an iCalendar feed and publish it to S3."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "boto3>=1.40.0",
    "beautifulsoup4>=4.13.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[project.scripts]
boxoffice-calendar = "boxoffice_calendar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boxoffice_calendar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
